[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Fonts/jupiterc.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Scenes/Packed/BG.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Sprites/Board_BG.png" type="Texture" id=3]
[ext_resource path="res://Assets/Scripts/Board.gd" type="Script" id=4]
[ext_resource path="res://Assets/Scenes/Packed/Knight.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Scripts/Game.gd" type="Script" id=6]
[ext_resource path="res://Assets/Scripts/Camera2D.gd" type="Script" id=7]
[ext_resource path="res://Assets/Music/Move.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Music/eat.wav" type="AudioStream" id=9]

[sub_resource type="Animation" id=1]
resource_name = "shockwave"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Shock:material:shader_param/size")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.061, 0.25 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Shock:material:shader_param/thickness")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -0.054, -0.02, -0.05 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/Shock:material:shader_param/fade")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.5, 0.0 ]
}

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
extra_spacing_char = 1
extra_spacing_space = -4
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
extra_spacing_char = 1
extra_spacing_space = -4
font_data = ExtResource( 1 )

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform vec2 center;
uniform float force;
uniform float size;
uniform float thickness;
uniform float fade;


void fragment() {
	float ratio = SCREEN_PIXEL_SIZE.x / SCREEN_PIXEL_SIZE.y;
	vec2 scaledUV = ( SCREEN_UV - vec2(0.5, 0) ) / vec2(ratio, 1.0) + vec2(0.5, 0);
	float mask = ( 1.0 - smoothstep(size-0.1, size, length(scaledUV - center)) ) *
	smoothstep(size - 0.1 - thickness, size - thickness, length(scaledUV - center)) * fade ;
	vec2 disp = normalize(scaledUV - center) * force * mask;

	COLOR = texture(SCREEN_TEXTURE, SCREEN_UV - disp);
	//COLOR = vec4(1.0,1.0,1.0,1.0) - vec4(mask);
	
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/center = Vector2( 0.5, 0.5 )
shader_param/force = 0.03
shader_param/size = 0.25
shader_param/thickness = -0.05
shader_param/fade = 0.0

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;
uniform vec4 color:hint_color;

void fragment(){
	vec4 tex = texture(SCREEN_TEXTURE, SCREEN_UV);
	COLOR = tex;
	COLOR *= color;
	
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/color = Color( 0.756863, 0.847059, 1, 1 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="block" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/shockwave = SubResource( 1 )

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -1.0
pitch_scale = 0.68

[node name="Eat" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
pitch_scale = 1.34

[node name="Ghost" type="Timer" parent="."]
process_mode = 0
wait_time = 0.05

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 7 )

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="Frequency" type="Timer" parent="Camera2D"]

[node name="Duration" type="Timer" parent="Camera2D"]

[node name="BG" parent="." instance=ExtResource( 2 )]

[node name="SprBoardBG" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.980392 )
texture = ExtResource( 3 )
centered = false
region_rect = Rect2( 0, 0, 260, 260 )

[node name="Board" type="Node2D" parent="."]
position = Vector2( 52, 52 )
script = ExtResource( 4 )

[node name="Enemies" type="Node2D" parent="."]

[node name="Knight" parent="." instance=ExtResource( 5 )]
show_behind_parent = true

[node name="Label" type="Control" parent="."]
margin_left = 50.0
margin_top = 20.0
margin_right = 168.0
margin_bottom = 42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="Label" parent="Label"]
margin_left = 3.0
margin_top = 1.0
margin_right = 132.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Bishops Left : 00"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Bishops" type="Label" parent="Label"]
margin_left = 4.0
margin_right = 133.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.45098, 0.0941176, 1 )
text = "Bishops Left : 00"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Score" type="Control" parent="."]
margin_left = 235.0
margin_top = 20.0
margin_right = 320.0
margin_bottom = 43.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="Label" parent="Score"]
margin_top = 1.0
margin_right = 129.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score : 000"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Score"]
margin_right = 129.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.733333, 0.109804, 1 )
text = "Score : 000"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Control" parent="."]
margin_left = 50.0
margin_top = 313.0
margin_right = 169.0
margin_bottom = 336.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="Label" parent="TimerLabel"]
margin_right = 129.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Time Left : 00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="TimerLabel"]
margin_right = 129.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.45098, 0.0941176, 1 )
text = "Time Left : 00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 5.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Shock" type="ColorRect" parent="CanvasLayer"]
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource( 7 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Ghost" to="." method="_on_Ghost_timeout"]
[connection signal="timeout" from="Camera2D/Frequency" to="Camera2D" method="_on_Frequency_timeout"]
[connection signal="timeout" from="Camera2D/Duration" to="Camera2D" method="_on_Duration_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
